--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Hub</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <h1>Vista Hub</h1>
