imagen añadida al proyecto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-    <h1>Vista Hub</h1>
+    <img src="src/descarga.png" alt="50x50" height="200" width="500">
 </body>
 </html>
