Formulario de inicio de sesion

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <img src="src/descarga.png" alt="50x50" height="200" width="500">
+    <div class="form-container">
+        <h2>Iniciar sesión</h2>
+            <p class="error-message"></p>
+            <form method="POST">
+            <input type="email" name="username" placeholder="Email" required>
+            <input type="password" name="password" placeholder="Contraseña" required>
+            <button type="submit">Entrar</button>
+        </form>
+        <p>¿No tienes cuenta? <a href="register.php">Regístrate aquí</a></p>
 </body>
 </html>
