Icono de la web cambiado

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Hub</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 <body>
-    <img src="src/descarga.png" alt="50x50" height="200" width="500">
+    <img src="assets/vistahub.png" alt="50x50" height="200" width="500">
     <div class="form-container">
         <h2>Iniciar sesión</h2>
             <p class="error-message"></p>
@@ -17,5 +18,6 @@
             <button type="submit">Entrar</button>
         </form>
         <p>¿No tienes cuenta? <a href="register.php">Regístrate aquí</a></p>
+    </div>
 </body>
 </html>
